--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=project-db
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@10.81.1.33:1521:ORCL
-spring.datasource.username=SYSTEM
-spring.datasource.password=mark1q2w3e$$*
+spring.datasource.url=jdbc:oracle:thin:@
+spring.datasource.username=
+spring.datasource.password=
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
